--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://omar-elnhas.github.io/react-p/",
+  "homepage": "https://omar-elnhas.github.io/react-project/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
